# INF4-Praktikum

./: .gitignore  README.md
algos/binarytree/: Cargo.toml  Makefile  README.md
algos/binarytree/src/: main.rs
algos/btree/: Makefile
algos/btree/src/: main.rs  main.rs.bak
algos/graph/: Cargo.toml  Makefile
algos/graph/src/: main.rs
algos/hashmap/src/: main.rs
algos/input/: seq0.txt  seq2.txt  seq3.txt
algos/intro/: README.md
algos/intro/src/: main.rs
algos/mergesort/: README.md
algos/mergesort/eval/: csv.py  n.csv
algos/mergesort/src/: main.rs
algos/partsum/: README.md
algos/partsum/eval/: csv.py  n.csv  n3.csv  nldn.csv
algos/partsum/n/: Cargo.toml
algos/partsum/n/src/: main.rs
algos/partsum/n3/: Cargo.toml
algos/partsum/n3/inp/: seq1.txt
algos/partsum/n3/src/: main.rs
algos/partsum/nldn/: Cargo.toml
algos/partsum/nldn/src/: main.rs
algos/quicksort/: Cargo.toml  Makefile  runtimes.csv
algos/quicksort/results/: runtimes.csv  seq0.dump  seq1.dump  seq2.dump  seq3.dump
algos/quicksort/src/: main.rs
low-level/bell/: Makefile  bell.c
low-level/bit-wizardry/: Makefile  bit  bit.c  fast
low-level/fft/: Makefile  debug  fft  fft.c
low-level/gray/: Makefile  gray.c
low-level/grey/: Makefile  grey.c
low-level/mixed-radix/: Makefile  mixed.c  mixed2.c
low-level/necklaces/: Makefile  fast2  neck.c  neck2.c  neck_fast.c
low-level/permutation/: .vimspector.json  Makefile  permutation.c  permutation2.c
