[package]
name = "nldn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
opt-level = 0  # Controls the --opt-level the compiler builds with
debug = true   # Controls whether the compiler passes `-g`

[profile.release]
opt-level = 3  # Controls the --opt-level the compiler builds with
debug = false   # Controls whether the compiler passes `-g`

[dependencies]
